# amazonka

./: .ghci  .gitignore  Makefile  Network-AWS-Auth.html  Network-AWS-AutoScaling.html  Network-AWS-CloudWatch.html  Network-AWS-EC2-Metadata.html  Network-AWS-EC2.html  Network-AWS-ELB.html  Network-AWS-Headers.html  Network-AWS-IAM.html  Network-AWS-Internal.html  Network-AWS-Route53.html  Network-AWS-S3.html  Network-AWS.html  TODO.org  amazonka-types  amazonka-types.cabal  amazonka.cabal  doc-index-33.html  doc-index-46.html  doc-index-58.html  doc-index-63.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  (+24 more)
amazonka/: Makefile
amazonka/src/Network/: AWS.hs
amazonka/src/Network/AWS/: Internal.hs
lib/: Makefile  amazonka.cabal
lib/amazon/: amazon.cabal
lib/amazon-autoscaling/: amazon-autoscaling.cabal
lib/amazon-cloudformation/: amazon-cloudformation.cabal
lib/amazon-cloudfront/: amazon-cloudfront.cabal
lib/amazon-cloudsearch/: amazon-cloudsearch.cabal
lib/amazon-cloudtrail/: amazon-cloudtrail.cabal
lib/amazon-cloudwatch/: amazon-cloudwatch.cabal
lib/amazon-core/src/Data/Time/: Formatters.hs
lib/amazon-core/src/Network/AWS/EC2/: Metadata.hs
lib/amazon-core/src/Network/AWS/Internal/: Request.hs  Signing.hs  Types.hs
lib/amazon-datapipeline/: amazon-datapipeline.cabal
lib/amazon-directconnect/: amazon-directconnect.cabal
lib/amazon-dynamodb/: amazon-dynamodb.cabal
lib/amazon-ec2/: amazon-ec2.cabal
lib/amazon-elasticache/: amazon-elasticache.cabal
lib/amazon-elasticbeanstalk/: amazon-elasticbeanstalk.cabal
lib/amazon-elb/: amazon-elb.cabal
lib/amazon-emr/: amazon-emr.cabal
lib/amazon-iam/: amazon-iam.cabal
lib/amazon-kinesis/: amazon-kinesis.cabal
lib/amazon-opsworks/: amazon-opsworks.cabal
lib/amazon-rds/: amazon-rds.cabal
lib/amazon-redshift/: amazon-redshift.cabal
lib/amazon-route53/: amazon-route53.cabal
lib/amazon-s3/: amazon-s3.cabal
lib/amazon-ses/: amazon-ses.cabal
lib/amazon-sns/: amazon-sns.cabal
lib/amazon-sqs/: amazon-sqs.cabal
lib/amazon-storagegateway/: amazon-storagegateway.cabal
lib/amazon-sts/: amazon-sts.cabal
lib/amazon-support/: amazon-support.cabal
lib/amazon-swf/: amazon-swf.cabal
lib/amazonka-core/: amazonka-core.cabal
lib/amazonka-core/src/Data/ByteString/: Helpers.hs
lib/amazonka-core/src/Network/AWS/: Core.hs  Headers.hs  Internal.hs
lib/amazonka-core/src/Network/AWS/EC2/: Metadata.hs
lib/amazonka-core/src/Network/AWS/Internal/: Credentials.hs  Request.hs  Serialisation.hs  Signing.hs  Types.hs
lib/amazonka-core/src/Network/AWS/Internal/Types/: Common.hs
lib/src/Data/ByteString/: Helpers.hs
lib/src/Data/Text/: Helpers.hs
lib/src/Network/: AWS.hs
lib/src/Network/AWS/: Auth.hs  Core.hs  Credentials.hs  Headers.hs  Internal.hs  Text.hs  Types.hs
lib/src/Network/AWS/EC2/: Metadata.hs
lib/src/Network/AWS/Generics/: XML.hs
lib/src/Network/AWS/Internal/: Credentials.hs  Request.hs  Response.hs  Serialisation.hs  Signing.hs  Types.hs
lib/src/Network/AWS/Internal/Types/: Common.hs
lib/src/Network/HTTP/QueryString/: Generic.hs  Instances.hs
lib/src/Text/: Class.hs
lib/src/Text/XML/: Generic.hs
script/: generate-pages
src/: Helpers.hs  Main.hs  Model.hs  Types.hs
src/Amazonka/: Boto.hs  Log.hs  Model.hs
src/Generator/: Helpers.hs  Model.hs  Operations.hs  Shapes.hs
src/Network/: AWS.hs
src/Network/AWS/: Internal.hs  S3.hs  Text.hs  Time.hs
src/Network/AWS/EC2/: Metadata.hs
src/Network/AWS/Generics/: Query.hs  XML.hs
src/Network/AWS/Internal/: Credentials.hs  Instances.hs  Request.hs  Response.hs  Signing.hs  Types.hs  XML.hs
src/Network/AWS/S3/: Types.hs
src/Text/XML/: Generic.hs
src/Text/XML/Expat/Pickle/: Generic.hs
tmpl/: cabal-lib.ede  cabal.ede  interface.ede  operation-json.ede  operation-query.ede  operation-rest-json.ede  operation-rest-xml.ede  operation-s3.ede  query.ede  service-json.ede  service-query.ede  service-rest-json.ede  service-rest-xml.ede  service-s3.ede  types-json.ede  types-xml.ede  types.ede
tmpl/_includes/: enum-json.ede  enum-xml.ede  enum.ede  fields.ede  header.ede  method-input.ede  newtype.ede  record.ede  response-field-assignment.ede  response-field.ede  strict-type.ede  to-headers.ede  to-path.ede  to-query.ede  type-inline.ede  type-list.ede  type-strict.ede  type.ede
