name:                  amazonka-types
version:               0.1.0
synopsis:              Generate Amazon Web Service APIs types
homepage:              http://github.com/brendanhay/amazonka-types
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka-types.git

executable amazonka-types
    default-language:  Haskell2010
    hs-source-dirs:    src
    main-is:           Main.hs

    ghc-options:       -Wall -rtsopts -threaded

    build-depends:
        aeson
      , base                  >= 4.6 && < 5
      , bytestring
      , directory
      , ede
      , errors                >= 1.4.4
      , text
      , unordered-containers
      , vector
