name:                  amazonka
version:               0.2.0
synopsis:              Comprehensive Amazon Web Service SDK
homepage:              http://github.com/brendanhay/amazonka
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS
      , Network.AWS.Core
      , Network.AWS.Generics.Query
      , Network.AWS.Generics.XML
      , Network.AWS.Text
      , Network.AWS.Time
      , Network.AWS.EC2.Metadata
      , Network.AWS.Headers

      -- * 2013-10-15
      , Network.AWS.EC2

      -- * 2010-05-08
      , Network.AWS.IAM

      -- * 2006-03-01
      , Network.AWS.S3

      -- * 2012-06-01
      , Network.AWS.ElasticLoadBalancing

      -- * 2012-12-12
      , Network.AWS.Route53

      -- * 2011-01-01
      , Network.AWS.AutoScaling

    other-modules:
        Network.AWS.Internal
      , Network.AWS.Internal.Credentials
      , Network.AWS.Internal.Request
      , Network.AWS.Internal.Serialisation
      , Network.AWS.Internal.Signing
      , Network.AWS.Internal.Types
      , Network.AWS.Internal.Types.Common

      , Network.AWS.EC2.Service
      , Network.AWS.EC2.Types
      , Network.AWS.EC2.ImportInstance
      , Network.AWS.EC2.RevokeSecurityGroupEgress
      , Network.AWS.EC2.CreateVpnGateway
      , Network.AWS.EC2.CreateNetworkAcl
      , Network.AWS.EC2.DeleteKeyPair
      , Network.AWS.EC2.DescribeTags
      , Network.AWS.EC2.DetachNetworkInterface
      , Network.AWS.EC2.DetachInternetGateway
      , Network.AWS.EC2.DetachVolume
      , Network.AWS.EC2.CancelBundleTask
      , Network.AWS.EC2.ReleaseAddress
      , Network.AWS.EC2.CreateInternetGateway
      , Network.AWS.EC2.DeleteVpnConnection
      , Network.AWS.EC2.DescribeBundleTasks
      , Network.AWS.EC2.AuthorizeSecurityGroupEgress
      , Network.AWS.EC2.DeregisterImage
      , Network.AWS.EC2.ModifyNetworkInterfaceAttribute
      , Network.AWS.EC2.ActivateLicense
      , Network.AWS.EC2.CancelReservedInstancesListing
      , Network.AWS.EC2.DescribeSpotPriceHistory
      , Network.AWS.EC2.DescribeDhcpOptions
      , Network.AWS.EC2.StopInstances
      , Network.AWS.EC2.DescribeInternetGateways
      , Network.AWS.EC2.BundleInstance
      , Network.AWS.EC2.DescribeNetworkInterfaces
      , Network.AWS.EC2.ReplaceNetworkAclAssociation
      , Network.AWS.EC2.DescribeLicenses
      , Network.AWS.EC2.DescribeAddresses
      , Network.AWS.EC2.DescribeSnapshotAttribute
      , Network.AWS.EC2.ReplaceRoute
      , Network.AWS.EC2.AuthorizeSecurityGroupIngress
      , Network.AWS.EC2.DescribeSubnets
      , Network.AWS.EC2.CreateTags
      , Network.AWS.EC2.PurchaseReservedInstancesOffering
      , Network.AWS.EC2.DeleteNetworkAclEntry
      , Network.AWS.EC2.ResetSnapshotAttribute
      , Network.AWS.EC2.DescribeVpnConnections
      , Network.AWS.EC2.DeleteRoute
      , Network.AWS.EC2.ReplaceNetworkAclEntry
      , Network.AWS.EC2.ResetInstanceAttribute
      , Network.AWS.EC2.AttachNetworkInterface
      , Network.AWS.EC2.DescribeInstanceStatus
      , Network.AWS.EC2.ImportKeyPair
      , Network.AWS.EC2.DeleteTags
      , Network.AWS.EC2.ConfirmProductInstance
      , Network.AWS.EC2.DescribeInstanceAttribute
      , Network.AWS.EC2.DescribeReservedInstancesOfferings
      , Network.AWS.EC2.CreateCustomerGateway
      , Network.AWS.EC2.DeleteSecurityGroup
      , Network.AWS.EC2.AttachInternetGateway
      , Network.AWS.EC2.RunInstances
      , Network.AWS.EC2.AssociateDhcpOptions
      , Network.AWS.EC2.DescribeReservedInstances
      , Network.AWS.EC2.DescribeVpcs
      , Network.AWS.EC2.DescribeConversionTasks
      , Network.AWS.EC2.AllocateAddress
      , Network.AWS.EC2.CancelConversionTask
      , Network.AWS.EC2.ModifyImageAttribute
      , Network.AWS.EC2.CreateRouteTable
      , Network.AWS.EC2.ReportInstanceStatus
      , Network.AWS.EC2.AttachVolume
      , Network.AWS.EC2.RequestSpotInstances
      , Network.AWS.EC2.DescribeVolumes
      , Network.AWS.EC2.DeleteVpnConnectionRoute
      , Network.AWS.EC2.RegisterImage
      , Network.AWS.EC2.RevokeSecurityGroupIngress
      , Network.AWS.EC2.ModifyReservedInstances
      , Network.AWS.EC2.DeleteNetworkAcl
      , Network.AWS.EC2.DeleteVpnGateway
      , Network.AWS.EC2.DescribeVolumeAttribute
      , Network.AWS.EC2.GetPasswordData
      , Network.AWS.EC2.CreateVpc
      , Network.AWS.EC2.CopySnapshot
      , Network.AWS.EC2.DisassociateAddress
      , Network.AWS.EC2.DeleteVpc
      , Network.AWS.EC2.CreateInstanceExportTask
      , Network.AWS.EC2.DescribeVpcAttribute
      , Network.AWS.EC2.CreateVolume
      , Network.AWS.EC2.ModifyVolumeAttribute
      , Network.AWS.EC2.DescribeSpotDatafeedSubscription
      , Network.AWS.EC2.DeletePlacementGroup
      , Network.AWS.EC2.CreateSubnet
      , Network.AWS.EC2.CreateNetworkInterface
      , Network.AWS.EC2.DescribeSecurityGroups
      , Network.AWS.EC2.DescribeExportTasks
      , Network.AWS.EC2.DetachVpnGateway
      , Network.AWS.EC2.EnableVolumeIO
      , Network.AWS.EC2.DescribeInstances
      , Network.AWS.EC2.CancelExportTask
      , Network.AWS.EC2.DeleteNetworkInterface
      , Network.AWS.EC2.ReplaceRouteTableAssociation
      , Network.AWS.EC2.StartInstances
      , Network.AWS.EC2.CreatePlacementGroup
      , Network.AWS.EC2.DescribeSnapshots
      , Network.AWS.EC2.AssociateAddress
      , Network.AWS.EC2.DescribeNetworkInterfaceAttribute
      , Network.AWS.EC2.ResetNetworkInterfaceAttribute
      , Network.AWS.EC2.DeleteInternetGateway
      , Network.AWS.EC2.DescribeReservedInstancesListings
      , Network.AWS.EC2.CreateVpnConnection
      , Network.AWS.EC2.DescribeCustomerGateways
      , Network.AWS.EC2.DeleteSubnet
      , Network.AWS.EC2.CopyImage
      , Network.AWS.EC2.UnmonitorInstances
      , Network.AWS.EC2.CreateSecurityGroup
      , Network.AWS.EC2.ImportVolume
      , Network.AWS.EC2.DisableVgwRoutePropagation
      , Network.AWS.EC2.CreateSpotDatafeedSubscription
      , Network.AWS.EC2.CancelSpotInstanceRequests
      , Network.AWS.EC2.CreateRoute
      , Network.AWS.EC2.DeleteSnapshot
      , Network.AWS.EC2.AssignPrivateIpAddresses
      , Network.AWS.EC2.ModifyInstanceAttribute
      , Network.AWS.EC2.DeleteCustomerGateway
      , Network.AWS.EC2.DisassociateRouteTable
      , Network.AWS.EC2.DeleteSpotDatafeedSubscription
      , Network.AWS.EC2.DescribePlacementGroups
      , Network.AWS.EC2.EnableVgwRoutePropagation
      , Network.AWS.EC2.ModifySnapshotAttribute
      , Network.AWS.EC2.CreateSnapshot
      , Network.AWS.EC2.CreateNetworkAclEntry
      , Network.AWS.EC2.CreateReservedInstancesListing
      , Network.AWS.EC2.AttachVpnGateway
      , Network.AWS.EC2.CreateDhcpOptions
      , Network.AWS.EC2.DescribeAccountAttributes
      , Network.AWS.EC2.RebootInstances
      , Network.AWS.EC2.DeactivateLicense
      , Network.AWS.EC2.CreateImage
      , Network.AWS.EC2.TerminateInstances
      , Network.AWS.EC2.DescribeKeyPairs
      , Network.AWS.EC2.CreateVpnConnectionRoute
      , Network.AWS.EC2.AssociateRouteTable
      , Network.AWS.EC2.DescribeVpnGateways
      , Network.AWS.EC2.GetConsoleOutput
      , Network.AWS.EC2.DescribeImageAttribute
      , Network.AWS.EC2.DeleteRouteTable
      , Network.AWS.EC2.ResetImageAttribute
      , Network.AWS.EC2.DescribeReservedInstancesModifications
      , Network.AWS.EC2.DescribeSpotInstanceRequests
      , Network.AWS.EC2.UnassignPrivateIpAddresses
      , Network.AWS.EC2.DeleteDhcpOptions
      , Network.AWS.EC2.DescribeNetworkAcls
      , Network.AWS.EC2.DescribeRegions
      , Network.AWS.EC2.MonitorInstances
      , Network.AWS.EC2.DescribeVolumeStatus
      , Network.AWS.EC2.DescribeRouteTables
      , Network.AWS.EC2.DescribeAvailabilityZones
      , Network.AWS.EC2.ModifyVpcAttribute
      , Network.AWS.EC2.DescribeImages
      , Network.AWS.EC2.CreateKeyPair
      , Network.AWS.EC2.DeleteVolume

      , Network.AWS.IAM.Service
      , Network.AWS.IAM.Types
      , Network.AWS.IAM.ListInstanceProfilesForRole
      , Network.AWS.IAM.CreateAccessKey
      , Network.AWS.IAM.CreateVirtualMFADevice
      , Network.AWS.IAM.DeleteAccountPasswordPolicy
      , Network.AWS.IAM.UpdateAccountPasswordPolicy
      , Network.AWS.IAM.GetUserPolicy
      , Network.AWS.IAM.GetRole
      , Network.AWS.IAM.DeactivateMFADevice
      , Network.AWS.IAM.DeleteVirtualMFADevice
      , Network.AWS.IAM.ListRoles
      , Network.AWS.IAM.ListUserPolicies
      , Network.AWS.IAM.DeleteRole
      , Network.AWS.IAM.ListUsers
      , Network.AWS.IAM.PutUserPolicy
      , Network.AWS.IAM.DeleteUserPolicy
      , Network.AWS.IAM.CreateRole
      , Network.AWS.IAM.GetAccountSummary
      , Network.AWS.IAM.ListGroupPolicies
      , Network.AWS.IAM.DeleteInstanceProfile
      , Network.AWS.IAM.RemoveRoleFromInstanceProfile
      , Network.AWS.IAM.CreateInstanceProfile
      , Network.AWS.IAM.CreateSAMLProvider
      , Network.AWS.IAM.DeleteAccountAlias
      , Network.AWS.IAM.RemoveUserFromGroup
      , Network.AWS.IAM.DeleteGroupPolicy
      , Network.AWS.IAM.PutGroupPolicy
      , Network.AWS.IAM.GetLoginProfile
      , Network.AWS.IAM.GetGroupPolicy
      , Network.AWS.IAM.ChangePassword
      , Network.AWS.IAM.ListServerCertificates
      , Network.AWS.IAM.UpdateAssumeRolePolicy
      , Network.AWS.IAM.GetInstanceProfile
      , Network.AWS.IAM.CreateLoginProfile
      , Network.AWS.IAM.GetSAMLProvider
      , Network.AWS.IAM.AddRoleToInstanceProfile
      , Network.AWS.IAM.ListGroupsForUser
      , Network.AWS.IAM.AddUserToGroup
      , Network.AWS.IAM.GetUser
      , Network.AWS.IAM.ListSigningCertificates
      , Network.AWS.IAM.DeleteSigningCertificate
      , Network.AWS.IAM.UpdateSigningCertificate
      , Network.AWS.IAM.ListVirtualMFADevices
      , Network.AWS.IAM.ResyncMFADevice
      , Network.AWS.IAM.DeleteAccessKey
      , Network.AWS.IAM.UpdateAccessKey
      , Network.AWS.IAM.ListAccessKeys
      , Network.AWS.IAM.GetRolePolicy
      , Network.AWS.IAM.CreateUser
      , Network.AWS.IAM.PutRolePolicy
      , Network.AWS.IAM.UploadSigningCertificate
      , Network.AWS.IAM.DeleteRolePolicy
      , Network.AWS.IAM.GetAccountPasswordPolicy
      , Network.AWS.IAM.UpdateUser
      , Network.AWS.IAM.DeleteUser
      , Network.AWS.IAM.ListRolePolicies
      , Network.AWS.IAM.CreateAccountAlias
      , Network.AWS.IAM.ListInstanceProfiles
      , Network.AWS.IAM.EnableMFADevice
      , Network.AWS.IAM.ListAccountAliases
      , Network.AWS.IAM.DeleteSAMLProvider
      , Network.AWS.IAM.UpdateSAMLProvider
      , Network.AWS.IAM.CreateGroup
      , Network.AWS.IAM.ListMFADevices
      , Network.AWS.IAM.UploadServerCertificate
      , Network.AWS.IAM.ListSAMLProviders
      , Network.AWS.IAM.GetServerCertificate
      , Network.AWS.IAM.DeleteGroup
      , Network.AWS.IAM.UpdateGroup
      , Network.AWS.IAM.ListGroups
      , Network.AWS.IAM.UpdateLoginProfile
      , Network.AWS.IAM.DeleteLoginProfile
      , Network.AWS.IAM.GetGroup
      , Network.AWS.IAM.DeleteServerCertificate
      , Network.AWS.IAM.UpdateServerCertificate

      , Network.AWS.S3.Service
      , Network.AWS.S3.Types
      , Network.AWS.S3.PutBucketRequestPayment
      , Network.AWS.S3.PutObject
      , Network.AWS.S3.DeleteObject
      , Network.AWS.S3.PutBucketLogging
      , Network.AWS.S3.ListBuckets
      , Network.AWS.S3.DeleteBucket
      , Network.AWS.S3.CreateBucket
      , Network.AWS.S3.DeleteBucketTagging
      , Network.AWS.S3.PutObjectAcl
      , Network.AWS.S3.PutBucketNotification
      , Network.AWS.S3.PutBucketTagging
      , Network.AWS.S3.GetBucketLocation
      , Network.AWS.S3.GetBucketNotification
      , Network.AWS.S3.GetObject
      , Network.AWS.S3.GetBucketWebsite
      , Network.AWS.S3.GetBucketRequestPayment
      , Network.AWS.S3.GetBucketLifecycle
      , Network.AWS.S3.ListObjectVersions
      , Network.AWS.S3.HeadBucket
      , Network.AWS.S3.PutBucketLifecycle
      , Network.AWS.S3.DeleteBucketLifecycle
      , Network.AWS.S3.CreateMultipartUpload
      , Network.AWS.S3.UploadPart
      , Network.AWS.S3.PutBucketWebsite
      , Network.AWS.S3.DeleteBucketWebsite
      , Network.AWS.S3.CompleteMultipartUpload
      , Network.AWS.S3.ListMultipartUploads
      , Network.AWS.S3.ListObjects
      , Network.AWS.S3.DeleteBucketPolicy
      , Network.AWS.S3.AbortMultipartUpload
      , Network.AWS.S3.PutBucketPolicy
      , Network.AWS.S3.GetObjectTorrent
      , Network.AWS.S3.DeleteObjects
      , Network.AWS.S3.GetBucketVersioning
      , Network.AWS.S3.DeleteBucketCors
      , Network.AWS.S3.PutBucketCors
      , Network.AWS.S3.GetBucketCors
      , Network.AWS.S3.GetObjectAcl
      , Network.AWS.S3.RestoreObject
      , Network.AWS.S3.HeadObject
      , Network.AWS.S3.PutBucketVersioning
      , Network.AWS.S3.GetBucketTagging
      , Network.AWS.S3.CopyObject
      , Network.AWS.S3.GetBucketPolicy
      , Network.AWS.S3.GetBucketLogging
      , Network.AWS.S3.GetBucketAcl
      , Network.AWS.S3.ListParts
      , Network.AWS.S3.UploadPartCopy
      , Network.AWS.S3.PutBucketAcl

      , Network.AWS.ElasticLoadBalancing.Service
      , Network.AWS.ElasticLoadBalancing.Types
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancers
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerPolicyTypes
      , Network.AWS.ElasticLoadBalancing.ApplySecurityGroupsToLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLBCookieStickinessPolicy
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancer
      , Network.AWS.ElasticLoadBalancing.DeregisterInstancesFromLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancerPolicy
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerPolicies
      , Network.AWS.ElasticLoadBalancing.DisableAvailabilityZonesForLoadBalancer
      , Network.AWS.ElasticLoadBalancing.EnableAvailabilityZonesForLoadBalancer
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerPoliciesForBackendServer
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerListenerSSLCertificate
      , Network.AWS.ElasticLoadBalancing.AttachLoadBalancerToSubnets
      , Network.AWS.ElasticLoadBalancing.ConfigureHealthCheck
      , Network.AWS.ElasticLoadBalancing.ModifyLoadBalancerAttributes
      , Network.AWS.ElasticLoadBalancing.CreateAppCookieStickinessPolicy
      , Network.AWS.ElasticLoadBalancing.DescribeInstanceHealth
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerAttributes
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancerListeners
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancerPolicy
      , Network.AWS.ElasticLoadBalancing.DetachLoadBalancerFromSubnets
      , Network.AWS.ElasticLoadBalancing.RegisterInstancesWithLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancer
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancerListeners
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerPoliciesOfListener

      , Network.AWS.Route53.Service
      , Network.AWS.Route53.Types
      , Network.AWS.Route53.GetChange
      , Network.AWS.Route53.ChangeResourceRecordSets
      , Network.AWS.Route53.DeleteHealthCheck
      , Network.AWS.Route53.CreateHostedZone
      , Network.AWS.Route53.CreateHealthCheck
      , Network.AWS.Route53.ListHostedZones
      , Network.AWS.Route53.GetHostedZone
      , Network.AWS.Route53.GetHealthCheck
      , Network.AWS.Route53.ListResourceRecordSets
      , Network.AWS.Route53.ListHealthChecks
      , Network.AWS.Route53.DeleteHostedZone

      , Network.AWS.AutoScaling.Service
      , Network.AWS.AutoScaling.Types
      , Network.AWS.AutoScaling.DescribeMetricCollectionTypes
      , Network.AWS.AutoScaling.PutNotificationConfiguration
      , Network.AWS.AutoScaling.DescribeTags
      , Network.AWS.AutoScaling.DeleteNotificationConfiguration
      , Network.AWS.AutoScaling.PutScalingPolicy
      , Network.AWS.AutoScaling.DeleteLaunchConfiguration
      , Network.AWS.AutoScaling.SuspendProcesses
      , Network.AWS.AutoScaling.SetInstanceHealth
      , Network.AWS.AutoScaling.DescribeTerminationPolicyTypes
      , Network.AWS.AutoScaling.DescribeAutoScalingInstances
      , Network.AWS.AutoScaling.DisableMetricsCollection
      , Network.AWS.AutoScaling.EnableMetricsCollection
      , Network.AWS.AutoScaling.DescribeScalingProcessTypes
      , Network.AWS.AutoScaling.DeleteTags
      , Network.AWS.AutoScaling.DescribeAutoScalingGroups
      , Network.AWS.AutoScaling.DeleteScheduledAction
      , Network.AWS.AutoScaling.SetDesiredCapacity
      , Network.AWS.AutoScaling.DescribeAutoScalingNotificationTypes
      , Network.AWS.AutoScaling.DescribeScheduledActions
      , Network.AWS.AutoScaling.CreateOrUpdateTags
      , Network.AWS.AutoScaling.DeletePolicy
      , Network.AWS.AutoScaling.AttachInstances
      , Network.AWS.AutoScaling.UpdateAutoScalingGroup
      , Network.AWS.AutoScaling.DeleteAutoScalingGroup
      , Network.AWS.AutoScaling.ResumeProcesses
      , Network.AWS.AutoScaling.ExecutePolicy
      , Network.AWS.AutoScaling.DescribeAccountLimits
      , Network.AWS.AutoScaling.TerminateInstanceInAutoScalingGroup
      , Network.AWS.AutoScaling.PutScheduledUpdateGroupAction
      , Network.AWS.AutoScaling.DescribePolicies
      , Network.AWS.AutoScaling.DescribeLaunchConfigurations
      , Network.AWS.AutoScaling.DescribeScalingActivities
      , Network.AWS.AutoScaling.DescribeNotificationConfigurations
      , Network.AWS.AutoScaling.DescribeAdjustmentTypes
      , Network.AWS.AutoScaling.CreateAutoScalingGroup
      , Network.AWS.AutoScaling.CreateLaunchConfiguration

    build-depends:
        aeson                 >= 0.7
      , async
      , attoparsec
      , base                  >= 4.6 && < 5
      , base16-bytestring
      , base64-bytestring
      , bytestring
      , case-insensitive
      , conduit
      , cryptohash
      , data-default
      , errors                >= 1.4.4
      , hashable
      , http-client
      , http-conduit
      , http-types
      , lifted-base
      , mtl
      , old-locale
      , resourcet
      , semigroups
      , tagged
      , text                  >= 1.0
      , time
      , transformers
      , unordered-containers
      , xml-conduit
