name:                  amazon-autoscaling
version:               20110101.0.1.0
synopsis:              Auto Scaling
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.AutoScaling

    other-modules:
        Network.AWS.AutoScaling.Service
      , Network.AWS.AutoScaling.Types

      , Network.AWS.AutoScaling.DescribeMetricCollectionTypes
      , Network.AWS.AutoScaling.PutNotificationConfiguration
      , Network.AWS.AutoScaling.DescribeTags
      , Network.AWS.AutoScaling.DeleteNotificationConfiguration
      , Network.AWS.AutoScaling.PutScalingPolicy
      , Network.AWS.AutoScaling.DeleteLaunchConfiguration
      , Network.AWS.AutoScaling.SuspendProcesses
      , Network.AWS.AutoScaling.SetInstanceHealth
      , Network.AWS.AutoScaling.DescribeTerminationPolicyTypes
      , Network.AWS.AutoScaling.DescribeAutoScalingInstances
      , Network.AWS.AutoScaling.DisableMetricsCollection
      , Network.AWS.AutoScaling.EnableMetricsCollection
      , Network.AWS.AutoScaling.DescribeScalingProcessTypes
      , Network.AWS.AutoScaling.DeleteTags
      , Network.AWS.AutoScaling.DescribeAutoScalingGroups
      , Network.AWS.AutoScaling.DeleteScheduledAction
      , Network.AWS.AutoScaling.SetDesiredCapacity
      , Network.AWS.AutoScaling.DescribeAutoScalingNotificationTypes
      , Network.AWS.AutoScaling.DescribeScheduledActions
      , Network.AWS.AutoScaling.CreateOrUpdateTags
      , Network.AWS.AutoScaling.DeletePolicy
      , Network.AWS.AutoScaling.AttachInstances
      , Network.AWS.AutoScaling.UpdateAutoScalingGroup
      , Network.AWS.AutoScaling.DeleteAutoScalingGroup
      , Network.AWS.AutoScaling.ResumeProcesses
      , Network.AWS.AutoScaling.ExecutePolicy
      , Network.AWS.AutoScaling.DescribeAccountLimits
      , Network.AWS.AutoScaling.TerminateInstanceInAutoScalingGroup
      , Network.AWS.AutoScaling.PutScheduledUpdateGroupAction
      , Network.AWS.AutoScaling.DescribePolicies
      , Network.AWS.AutoScaling.DescribeLaunchConfigurations
      , Network.AWS.AutoScaling.DescribeScalingActivities
      , Network.AWS.AutoScaling.DescribeNotificationConfigurations
      , Network.AWS.AutoScaling.DescribeAdjustmentTypes
      , Network.AWS.AutoScaling.CreateAutoScalingGroup
      , Network.AWS.AutoScaling.CreateLaunchConfiguration

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
