name:                  amazon-amazon-cloudsearch
version:               20110201.0.1.0
synopsis:              Amazon CloudSearch
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.CloudSearch

    other-modules:
        Network.AWS.CloudSearch.Service
      , Network.AWS.CloudSearch.Types

      , Network.AWS.CloudSearch.DescribeSynonymOptions
      , Network.AWS.CloudSearch.UpdateStopwordOptions
      , Network.AWS.CloudSearch.DescribeRankExpressions
      , Network.AWS.CloudSearch.DescribeDefaultSearchField
      , Network.AWS.CloudSearch.DescribeServiceAccessPolicies
      , Network.AWS.CloudSearch.DeleteRankExpression
      , Network.AWS.CloudSearch.UpdateSynonymOptions
      , Network.AWS.CloudSearch.DescribeStopwordOptions
      , Network.AWS.CloudSearch.DescribeDomains
      , Network.AWS.CloudSearch.DefineRankExpression
      , Network.AWS.CloudSearch.CreateDomain
      , Network.AWS.CloudSearch.DescribeStemmingOptions
      , Network.AWS.CloudSearch.DescribeIndexFields
      , Network.AWS.CloudSearch.IndexDocuments
      , Network.AWS.CloudSearch.DeleteIndexField
      , Network.AWS.CloudSearch.UpdateStemmingOptions
      , Network.AWS.CloudSearch.UpdateServiceAccessPolicies
      , Network.AWS.CloudSearch.UpdateDefaultSearchField
      , Network.AWS.CloudSearch.DeleteDomain
      , Network.AWS.CloudSearch.DefineIndexField

    build-depends:
        base >= 4.6 && < 5
