name:                  amazon-cloudtrail
version:               20131101.0.1.0
synopsis:              AWS CloudTrail
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.CloudTrail

    other-modules:
        Network.AWS.CloudTrail.Service
      , Network.AWS.CloudTrail.Types

      , Network.AWS.CloudTrail.DescribeTrails
      , Network.AWS.CloudTrail.StopLogging
      , Network.AWS.CloudTrail.DeleteTrail
      , Network.AWS.CloudTrail.UpdateTrail
      , Network.AWS.CloudTrail.CreateTrail
      , Network.AWS.CloudTrail.GetTrailStatus
      , Network.AWS.CloudTrail.StartLogging

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
