name:                  amazon-cloudwatch
version:               20100801.0.1.0
synopsis:              Amazon CloudWatch
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.CloudWatch

    other-modules:
        Network.AWS.CloudWatch.Service
      , Network.AWS.CloudWatch.Types

      , Network.AWS.CloudWatch.EnableAlarmActions
      , Network.AWS.CloudWatch.PutMetricData
      , Network.AWS.CloudWatch.DescribeAlarms
      , Network.AWS.CloudWatch.ListMetrics
      , Network.AWS.CloudWatch.DeleteAlarms
      , Network.AWS.CloudWatch.DescribeAlarmHistory
      , Network.AWS.CloudWatch.GetMetricStatistics
      , Network.AWS.CloudWatch.DescribeAlarmsForMetric
      , Network.AWS.CloudWatch.DisableAlarmActions
      , Network.AWS.CloudWatch.PutMetricAlarm
      , Network.AWS.CloudWatch.SetAlarmState

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
