name:                  amazon-directconnect
version:               20121025.0.1.0
synopsis:              AWS Direct Connect
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.DirectConnect

    other-modules:
        Network.AWS.DirectConnect.Service
      , Network.AWS.DirectConnect.Types

      , Network.AWS.DirectConnect.DescribeInterconnects
      , Network.AWS.DirectConnect.DeleteConnection
      , Network.AWS.DirectConnect.CreateConnection
      , Network.AWS.DirectConnect.DescribeConnections
      , Network.AWS.DirectConnect.DescribeConnectionsOnInterconnect
      , Network.AWS.DirectConnect.DeleteInterconnect
      , Network.AWS.DirectConnect.ConfirmPrivateVirtualInterface
      , Network.AWS.DirectConnect.DescribeLocations
      , Network.AWS.DirectConnect.CreatePublicVirtualInterface
      , Network.AWS.DirectConnect.AllocatePrivateVirtualInterface
      , Network.AWS.DirectConnect.ConfirmConnection
      , Network.AWS.DirectConnect.ConfirmPublicVirtualInterface
      , Network.AWS.DirectConnect.DescribeVirtualGateways
      , Network.AWS.DirectConnect.DescribeVirtualInterfaces
      , Network.AWS.DirectConnect.DeleteVirtualInterface
      , Network.AWS.DirectConnect.CreatePrivateVirtualInterface
      , Network.AWS.DirectConnect.AllocatePublicVirtualInterface
      , Network.AWS.DirectConnect.AllocateConnectionOnInterconnect
      , Network.AWS.DirectConnect.CreateInterconnect

    build-depends:
        base >= 4.6 && < 5
