name:                  amazon-amazon-dynamodb
version:               20120810.0.1.0
synopsis:              Amazon DynamoDB
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.DynamoDB

    other-modules:
        Network.AWS.DynamoDB.Service
      , Network.AWS.DynamoDB.Types

      , Network.AWS.DynamoDB.PutItem
      , Network.AWS.DynamoDB.DeleteItem
      , Network.AWS.DynamoDB.UpdateItem
      , Network.AWS.DynamoDB.DeleteTable
      , Network.AWS.DynamoDB.UpdateTable
      , Network.AWS.DynamoDB.BatchGetItem
      , Network.AWS.DynamoDB.DescribeTable
      , Network.AWS.DynamoDB.GetItem
      , Network.AWS.DynamoDB.BatchWriteItem
      , Network.AWS.DynamoDB.ListTables
      , Network.AWS.DynamoDB.Scan
      , Network.AWS.DynamoDB.Query
      , Network.AWS.DynamoDB.CreateTable

    build-depends:
        base >= 4.6 && < 5
