name:                  amazon-amazon-elasticache
version:               20130615.0.1.0
synopsis:              Amazon ElastiCache
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.ElastiCache

    other-modules:
        Network.AWS.ElastiCache.Service
      , Network.AWS.ElastiCache.Types

      , Network.AWS.ElastiCache.DeleteCacheSecurityGroup
      , Network.AWS.ElastiCache.CreateReplicationGroup
      , Network.AWS.ElastiCache.DeleteCacheCluster
      , Network.AWS.ElastiCache.RebootCacheCluster
      , Network.AWS.ElastiCache.RevokeCacheSecurityGroupIngress
      , Network.AWS.ElastiCache.CreateCacheCluster
      , Network.AWS.ElastiCache.DescribeEvents
      , Network.AWS.ElastiCache.DescribeEngineDefaultParameters
      , Network.AWS.ElastiCache.ModifyCacheParameterGroup
      , Network.AWS.ElastiCache.DeleteReplicationGroup
      , Network.AWS.ElastiCache.DescribeCacheClusters
      , Network.AWS.ElastiCache.PurchaseReservedCacheNodesOffering
      , Network.AWS.ElastiCache.ModifyReplicationGroup
      , Network.AWS.ElastiCache.DescribeCacheParameters
      , Network.AWS.ElastiCache.DescribeCacheSubnetGroups
      , Network.AWS.ElastiCache.CreateCacheSecurityGroup
      , Network.AWS.ElastiCache.AuthorizeCacheSecurityGroupIngress
      , Network.AWS.ElastiCache.CreateCacheSubnetGroup
      , Network.AWS.ElastiCache.DescribeCacheParameterGroups
      , Network.AWS.ElastiCache.ResetCacheParameterGroup
      , Network.AWS.ElastiCache.DescribeReplicationGroups
      , Network.AWS.ElastiCache.DescribeReservedCacheNodesOfferings
      , Network.AWS.ElastiCache.ModifyCacheSubnetGroup
      , Network.AWS.ElastiCache.DeleteCacheParameterGroup
      , Network.AWS.ElastiCache.DescribeCacheSecurityGroups
      , Network.AWS.ElastiCache.ModifyCacheCluster
      , Network.AWS.ElastiCache.DescribeCacheEngineVersions
      , Network.AWS.ElastiCache.CreateCacheParameterGroup
      , Network.AWS.ElastiCache.DescribeReservedCacheNodes
      , Network.AWS.ElastiCache.DeleteCacheSubnetGroup

    build-depends:
        base >= 4.6 && < 5
